# CoffeeReport

./: .coverage  .gitignore  LICENSE.txt  README.md  pyproject.toml  pytest.ini
src/coffee_report/: __init__.py  cli.py  data_loader.py  main.py  presenters.py
src/coffee_report/reports/: __init__.py  base.py  median_coffee.py
tests/: __init__.py  conftest.py  test_cli.py  test_data_loader.py  test_factory.py  test_integration.py  test_median_coffee.py  test_presenters.py
